--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,115 @@
     transform: rotate(360deg);
   }
 }
+
+* {
+  margin: 0px;
+  padding: 0px;
+  border: none;
+}
+
+ul {
+  display: flex;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #0d1d25;
+}
+
+.col-3 {
+  width: 25%;
+}
+
+.nav {
+  width: 70%;
+}
+
+.container {
+  width: 100%;
+  max-width: 1240px;
+  margin: 0 auto;
+}
+
+.img-logo {
+  width: 64px;
+  height: 64px;
+}
+
+.header-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav-item {
+  border-left: 1px solid #e9e9e9;
+}
+
+.nav-item:first-child {
+  border: none;
+}
+
+.nav-link {
+  padding: 0 15px;
+}
+
+.page-main {
+  border-top: 1px solid #e9e9e9;
+  border-bottom: 1px solid #e9e9e9;
+  background-color: #282c34;
+  padding: 50px 0;
+}
+
+.title-app {
+  color: #ffffff;
+}
+
+.page-info {
+  width: 6%;
+}
+
+.nav-icon {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-list {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
+}
+
+.footer-item {
+  flex-direction: column;
+  align-items: self-start;
+}
+
+.footer-card-list {
+  flex-direction: column;
+}
+
+.footer-item-title {
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  font-weight: 1000;
+}
+
+.footer-card-item-dot::before {
+  content: "\2022";
+  margin-right: 5px;
+  font-size: x-large;
+}
+
+.footer-card-link i {
+  margin-right: 10px;
+}
