--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ button .active {
 }
 
 .page-main {
-  min-height: 250px;
+  min-height: 350px;
   border-top: 1px solid #e9e9e9;
   border-bottom: 1px solid #e9e9e9;
   padding: 50px 0;
@@ -213,4 +213,57 @@ button .active {
 
 .mr-15 {
   margin-right: 15px;
+}
+
+.notice-box {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+}
+
+.mr-15 {
+  margin-right: 15px
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
+}
+
+.list-column {
+  flex-direction: column;
+}
+
+.list-column 
+.item {
+  margin-bottom: 15px;
+}
+
+.list-column 
+.delete {
+  font-size: x-large;
+}
+
+.list-column 
+.delete:hover {
+  color: red;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.fs-18 {
+  font-size: 18px;
+}
+
+.fs-14 {
+  font-size: 14px;
+}
+
+.txt-gray {
+  color: #616060;
 }
