style for nav link active

--- a/src/assets/scss/state/_state.scss
+++ b/src/assets/scss/state/_state.scss
@@ -7,7 +7,7 @@
   // background-color: rgb(243, 232, 219);
 }
 
-.section-about-us {
+.section-about-us, .section-account {
   padding: 50px;
 }
 
@@ -23,6 +23,22 @@
   margin-bottom: 40px;
 }
 
+.mb-24 {
+  margin-bottom: 24px;
+}
+
 .txt-gray {
   color: #a8a5a5;
+}
+
+.text-group {
+  padding: 4px 0;
+  .title {
+    display: inline-block;
+    width: 120px;
+  }
+}
+
+.active {
+  color: map-get($map: $color, $key: primary);
 }
