--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -96,7 +96,6 @@
   >li {
     float: left;
     &:hover > ul {
-      top: 100%;
       opacity: 1;
       z-index: 1;
       visibility: visible;
@@ -122,8 +121,8 @@
     transition: all 0.2s ease-in;
     z-index: -1;
     visibility: hidden;
-    top: 130%;
-    left: 0;
+    top: 20px;
+    left: 10px;
     background-color: map-get($map: $bg-color, $key: primary);
   }
 }
