--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -125,4 +125,13 @@
     left: 10px;
     background-color: map-get($map: $bg-color, $key: primary);
   }
+  .cart-number-wrap {
+    position: relative;
+    .cart-number {
+      position: absolute;
+      color: map-get($map: $color, $key: primary);
+      top: -10px;
+      right: 0;
+    }
+  }
 }
